// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing service page rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-pmaldw": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1k30xul": "",
        }
      }
      style={
        Object {
          "opacity": 0.6,
        }
      }
    />
  </div>
  <div
    className="mn mn--full mn--nv-s css-1qgporj"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1d2khtc": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-1ldikjo": "",
            }
          }
        >
          <div
            className="p-a300 p-a800--xl br br-t400 br--y css-cp2s60"
            style={Object {}}
          >
            <div>
              <div
                className="sh sh--y"
              >
                <h2
                  className="sh-title"
                >
                  Cosmic Incursion
                </h2>
              </div>
              <div
                className="g g--top"
              >
                <div
                  className="g--7 m-v500"
                >
                  <textarea
                    className={
                      Object {
                        "data-css-1gh870p": "",
                      }
                    }
                    defaultValue=""
                    name="description"
                    onBlur={[Function]}
                    onInput={[Function]}
                    placeholder="How can we help?"
                  />
                  <div>
                    <label
                      className="txt"
                    >
                      <span
                        className="txt-l"
                      >
                        Please provide any other relevant information:
                         
                      </span>
                      <textarea
                        className="txt-f"
                        name="ST-CMTS"
                        onChange={[Function]}
                        rows="5"
                        value=""
                      />
                    </label>
                  </div>
                  <hr
                    className="hr hr--dash m-v500"
                  />
                  <div>
                    <label
                      className="txt"
                    >
                      <span
                        className="txt-l"
                      >
                        **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                         
                      </span>
                      <input
                        className="txt-f"
                        name="INFO-CSIRMV1"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <hr
                    className="hr hr--dash m-v500"
                  />
                  <div>
                    <div>
                      <div
                        className="m-v300"
                      >
                        <span
                          className="txt-l"
                        >
                          How many dimensions have been breached?
                           
                          <span
                            className="t--req"
                          >
                            Required
                          </span>
                        </span>
                      </div>
                      <div
                        className="g"
                      >
                        <div
                          className="g--12"
                        >
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="One"
                            />
                            <span
                              className="ra-l"
                            >
                              One
                            </span>
                          </label>
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="Two"
                            />
                            <span
                              className="ra-l"
                            >
                              Two
                            </span>
                          </label>
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="Three"
                            />
                            <span
                              className="ra-l"
                            >
                              Three
                            </span>
                          </label>
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="More than Three"
                            />
                            <span
                              className="ra-l"
                            >
                              More than Three
                            </span>
                          </label>
                          <span />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="g--5 m-v500"
                >
                  <div
                    className="br br-a200"
                  >
                    <div
                      className="css-19ub58"
                      onClick={[Function]}
                      onDragEnter={[Function]}
                      onDragLeave={[Function]}
                      onDragOver={[Function]}
                      onDragStart={[Function]}
                      onDrop={[Function]}
                      style={Object {}}
                    >
                      <img
                        alt=""
                        height="324"
                        src="/static/img/image-upload.png"
                        style={
                          Object {
                            "display": "block",
                            "height": "auto",
                            "width": "100%",
                          }
                        }
                        width="479"
                      />
                      <input
                        accept="image/*"
                        multiple={false}
                        onChange={[Function]}
                        style={
                          Object {
                            "display": "none",
                          }
                        }
                        type="file"
                      />
                    </div>
                    <div
                      className="br br-t200"
                      style={
                        Object {
                          "position": "relative",
                        }
                      }
                    >
                      <a
                        className="btn btn--w btn--b"
                        href="javascript:void(0)"
                        onClick={[Function]}
                        style={
                          Object {
                            "visibility": "visible",
                          }
                        }
                      >
                        Upload Photo
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="g m-v500 css-1k8tu3j"
              >
                <div
                  className="g--9 t--info"
                  style={
                    Object {
                      "textAlign": "right",
                    }
                  }
                >
                  <span>
                    Please fill out 
                    <span
                      className="t--req"
                    >
                      required
                    </span>
                     fields to continue
                  </span>
                </div>
                <button
                  className="btn g--3"
                  disabled={true}
                  onClick={[Function]}
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`existing service page rendering phone 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-pmaldw": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1k30xul": "",
        }
      }
      style={
        Object {
          "opacity": 0.6,
        }
      }
    />
  </div>
  <div
    className="mn mn--full mn--nv-s css-1qgporj"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1d2khtc": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-1ldikjo": "",
            }
          }
        >
          <div
            className="p-a300 p-a800--xl br br-t400 br--y css-cp2s60"
            style={Object {}}
          >
            <div>
              <div
                className="sh sh--y"
              >
                <h2
                  className="sh-title"
                >
                  Cosmic Incursion
                </h2>
              </div>
              <div
                className="g g--top"
              >
                <div
                  className="g--7 m-v500"
                >
                  <textarea
                    className={
                      Object {
                        "data-css-1gh870p": "",
                      }
                    }
                    defaultValue=""
                    name="description"
                    onBlur={[Function]}
                    onInput={[Function]}
                    placeholder="How can we help?"
                  />
                  <div>
                    <label
                      className="txt"
                    >
                      <span
                        className="txt-l"
                      >
                        Please provide any other relevant information:
                         
                      </span>
                      <textarea
                        className="txt-f"
                        name="ST-CMTS"
                        onChange={[Function]}
                        rows="5"
                        value=""
                      />
                    </label>
                  </div>
                  <hr
                    className="hr hr--dash m-v500"
                  />
                  <div>
                    <label
                      className="txt"
                    >
                      <span
                        className="txt-l"
                      >
                        **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                         
                      </span>
                      <input
                        className="txt-f"
                        name="INFO-CSIRMV1"
                        onChange={[Function]}
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <hr
                    className="hr hr--dash m-v500"
                  />
                  <div>
                    <div>
                      <div
                        className="m-v300"
                      >
                        <span
                          className="txt-l"
                        >
                          How many dimensions have been breached?
                           
                          <span
                            className="t--req"
                          >
                            Required
                          </span>
                        </span>
                      </div>
                      <div
                        className="g"
                      >
                        <div
                          className="g--12"
                        >
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="One"
                            />
                            <span
                              className="ra-l"
                            >
                              One
                            </span>
                          </label>
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="Two"
                            />
                            <span
                              className="ra-l"
                            >
                              Two
                            </span>
                          </label>
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="Three"
                            />
                            <span
                              className="ra-l"
                            >
                              Three
                            </span>
                          </label>
                          <label
                            className="ra"
                          >
                            <input
                              checked={false}
                              className="ra-f"
                              name="SR-CSIRMV1"
                              onChange={[Function]}
                              type="radio"
                              value="More than Three"
                            />
                            <span
                              className="ra-l"
                            >
                              More than Three
                            </span>
                          </label>
                          <span />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="g--5 m-v500"
                >
                  <div
                    className="br br-a200"
                  >
                    <div
                      className="css-19ub58"
                      onClick={[Function]}
                      onDragEnter={[Function]}
                      onDragLeave={[Function]}
                      onDragOver={[Function]}
                      onDragStart={[Function]}
                      onDrop={[Function]}
                      style={Object {}}
                    >
                      <img
                        alt=""
                        height="324"
                        src="/static/img/image-upload.png"
                        style={
                          Object {
                            "display": "block",
                            "height": "auto",
                            "width": "100%",
                          }
                        }
                        width="479"
                      />
                      <input
                        accept="image/*"
                        multiple={false}
                        onChange={[Function]}
                        style={
                          Object {
                            "display": "none",
                          }
                        }
                        type="file"
                      />
                    </div>
                    <div
                      className="br br-t200"
                      style={
                        Object {
                          "position": "relative",
                        }
                      }
                    >
                      <a
                        className="btn btn--w btn--b"
                        href="javascript:void(0)"
                        onClick={[Function]}
                        style={
                          Object {
                            "visibility": "visible",
                          }
                        }
                      >
                        Upload Photo
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="g m-v500 css-1k8tu3j"
              >
                <div
                  className="g--9 t--info"
                  style={
                    Object {
                      "textAlign": "right",
                    }
                  }
                >
                  <span>
                    Please fill out 
                    <span
                      className="t--req"
                    >
                      required
                    </span>
                     fields to continue
                  </span>
                </div>
                <button
                  className="btn g--3"
                  disabled={true}
                  onClick={[Function]}
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`existing service page rendering phone location step 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-pmaldw": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1k30xul": "",
        }
      }
      style={
        Object {
          "opacity": 1,
        }
      }
    />
  </div>
  <div
    className="mn mn--full mn--nv-s css-1qgporj"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1d2khtc": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-14smo0c": "",
            }
          }
        >
          <div
            className="p-a300  br br-t400 br--y css-cp2s60"
            style={Object {}}
          >
            <div
              className={
                Object {
                  "data-css-1szwbq4": "",
                }
              }
            >
              <h3
                className="t--info"
              >
                Where is the problem happening?
              </h3>
              <hr
                className="hr hr--dash"
              />
              
              <form
                className="sf sf--sm sf--y m-v300"
                onSubmit={[Function]}
              >
                <div
                  className="sf-i"
                >
                  <input
                    className="sf-i-f"
                    onInput={[Function]}
                    placeholder="Search for an address…"
                    type="text"
                    value=""
                  />
                  <button
                    className="sf-i-b"
                    disabled={true}
                    type="submit"
                  >
                    Search
                  </button>
                </div>
              </form>
              <div
                className="g css-1k8tu3j"
              >
                <div
                  className="g--6"
                />
                <button
                  className="btn g--6"
                  disabled={true}
                  onClick={[Function]}
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`missing service page rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-pmaldw": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1k30xul": "",
        }
      }
      style={
        Object {
          "opacity": 0.6,
        }
      }
    />
  </div>
  <div
    className="mn mn--full mn--nv-s css-1qgporj"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1d2khtc": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-1ldikjo": "",
            }
          }
        >
          <div
            className="p-a300 p-a800--xl br br-t400 br--y css-cp2s60"
            style={Object {}}
          >
            <div
              className="sh sh--y"
            >
              <h2
                className="sh-title"
              >
                Service not found
              </h2>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`report form rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-pmaldw": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1k30xul": "",
        }
      }
      style={
        Object {
          "opacity": 0.6,
        }
      }
    />
  </div>
  <div
    className="mn mn--full mn--nv-s css-1qgporj"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1d2khtc": "",
          }
        }
      >
        <div
          className="p-a300 p-a800--xl br br-t400 br--y css-cp2s60"
          style={Object {}}
        >
          <div>
            <div
              className="sh sh--y"
            >
              <h2
                className="sh-title"
              >
                File a Report
              </h2>
            </div>
            <div
              className="t--intro m-v300"
            >
              Through BOS:311, you can report non-emergency issues with the City.
            </div>
            <div
              className="g m-t500"
            >
              <div
                className="g--7"
              >
                <h3
                  className="stp m-v100 css-17cwx2g"
                >
                  Tell us your problem
                </h3>
                <textarea
                  className={
                    Object {
                      "data-css-1red1ju": "",
                    }
                  }
                  defaultValue=""
                  name="description"
                  onBlur={[Function]}
                  onInput={[Function]}
                  placeholder="Example: my street hasn’t been plowed"
                />
                <div
                  className="m-t500"
                  style={
                    Object {
                      "textAlign": "right",
                    }
                  }
                >
                  <button
                    className="btn css-1q8b8td"
                    disabled={true}
                    onClick={[Function]}
                  >
                    Start a Report
                  </button>
                </div>
              </div>
              <div
                className="g--1"
              />
              <div
                className="g--4 css-jnu3m1"
              >
                <div
                  className="m-v300 t--info"
                >
                  You can also start a report by picking one of these popular services:
                </div>
                <ul
                  className="ul"
                >
                  <li>
                    <a
                      className="t--sans tt-u"
                      href="/report/CSMCINC"
                      onClick={[Function]}
                    >
                      Cosmic Incursion
                    </a>
                  </li>
                </ul>
                .
                <div
                  className="t--info m-v300"
                  style={
                    Object {
                      "textAlign": "right",
                    }
                  }
                >
                  <a
                    href="javasscript:void(0)"
                  >
                    See all services…
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "auto",
        }
      }
    >
      <div
        className="p-a500 g br br-t400 br--y css-zsl5qt "
      >
        <form
          acceptCharset="UTF-8"
          action="/lookup"
          className="sf sf--y sf--md g--5"
          method="get"
          onSubmit={[Function]}
        >
          <div
            className="sf-i"
          >
            <input
              className="sf-i-f"
              name="q"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search public reports…"
              type="text"
              value=""
            />
            <button
              className="sf-i-b"
            >
              Search
            </button>
          </div>
        </form>
        <div
          className="g--2 ta-c"
        >
          <span
            className="css-1ft9ufz br br-a200"
          >
            or
          </span>
        </div>
        <div
          className="g--5"
        >
          <div
            className="t--sans t--upper"
          >
            <a
              href="javascript:void(0)"
              onClick={[Function]}
            >
              Browse public reports
            </a>
          </div>
          <div
            style={
              Object {
                "color": "#828282",
                "fontStyle": "italic",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className={
      Object {
        "data-css-jzbv74": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-shdobr": "",
        }
      }
    >
      <div
        className="p-a300"
      >
        <div
          className="t--intro"
        >
          No results found
        </div>
        <div
          className="t--info"
        >
          Try a different search term or move the map to search a different area.
        </div>
      </div>
    </div>
  </div>
</div>
`;
